--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.phearme.comixkcd"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 5
-        versionName "1.4"
+        versionCode 6
+        versionName "1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         javaCompileOptions {
             annotationProcessorOptions {
@@ -27,7 +27,7 @@ android {
 }
 
 dependencies {
-    def supportLibVersion = "28.0.0-rc02"
+    def supportLibVersion = "28.0.0"
     def roomVersion = "1.1.1"
     def glideVersion = "4.8.0"
 
